k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-k8s
    release: stable
  name: sample-k8s
spec:
  ports:
    - name: sample-k8s
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: sample-k8s
    release: stable
  sessionAffinity: None
  type: ClusterIP
